# fastapi-booking-flight-ticket-service

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile.backend  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 108dedb0a99f_changed_typo_orders.py  ccc1e9b16194_create_user_and_blog_table_migrations.py  dfbc2aaf7102_changed_user_and_order_model.py  eb13bdd1f562_disbaled_nullable_for_user_model.py
backend/apis/: base.py
backend/apis/v1/: route_login.py  route_order.py  route_passenger.py  route_ticket.py  route_user.py
backend/core/: config.py  security.py
backend/db/: base.py  base_class.py  session.py
backend/db/models/: airport.py  order.py  passenger.py  ticket.py  user.py
backend/db/repository/: order.py  passenger.py  user.py
backend/schemas/: airport.py  order.py  passenger.py  ticket.py  user.py
backend/tests/: conftest.py
backend/tests/test_routes/: test_users.py
backend/tests/utils/: user.py
flight_api/: Dockerfile.api  main.py  models.py  schemas.py
flight_api/database/: in_memory_db.py
flight_api/routes/: flight_routes.py
