[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["david <alireza.d159@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}
alembic = "^1.14.0"
aiosqlite = "^0.20.0"
greenlet = "^3.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^8.3.3"
faker = "^33.0.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
